adjust partners page

--- a/style/partials/_partners.scss
+++ b/style/partials/_partners.scss
@@ -47,7 +47,7 @@
 	}
 	#community-partners {
 		background: url(../assets/sketch-scissors@2x.png) no-repeat;
-		background-position: 7vw 1100px;
+		background-position: 7vw bottom;
 		background-size: 280px;
 		min-height: 1450px;
 		position: relative;
@@ -95,7 +95,7 @@
 	}
 	#school-partners {
 		background: url(../assets/sketch-eraser.png) no-repeat;
-		background-position: 750px 2251px;
+		background-position: right 120px bottom 420px;
 		background-size: 300px;
 		min-height: 2878px;
 		margin-bottom: 200px;
