--- a/style/style.css
+++ b/style/style.css
@@ -1142,7 +1142,7 @@ nav {
           width: 100%; } }
   #partners #community-partners {
     background: url(../assets/sketch-scissors@2x.png) no-repeat;
-    background-position: 7vw 1100px;
+    background-position: 7vw bottom;
     background-size: 280px;
     min-height: 1450px;
     position: relative;
@@ -1182,7 +1182,7 @@ nav {
         transform: translateY(-135px); } }
   #partners #school-partners {
     background: url(../assets/sketch-eraser.png) no-repeat;
-    background-position: 750px 2251px;
+    background-position: right 120px bottom 420px;
     background-size: 300px;
     min-height: 2878px;
     margin-bottom: 200px;
