--- a/style/partials/_financials.scss
+++ b/style/partials/_financials.scss
@@ -33,20 +33,13 @@
 	}
 	#revenue {
 		margin-top: 150px;
-		img {
-			left: 10px;
-			box-sizing: border-box;
-			padding: 0 10px;
-			margin-top: 80px;
-			width: 100%;
-		}
 	}
-	#expenses {
+	#expenses, #revenue {
 		img {
 			left: 10px;
 			box-sizing: border-box;
 			padding: 0 10px;
-			margin-top: 60px;
+			margin-top: 130px;
 			width: 100%;
 		}
 	}
