--- a/style/partials/_team.scss
+++ b/style/partials/_team.scss
@@ -146,26 +146,38 @@
 	}
 }
 .team-members__member {
-	margin-bottom: 73px;
-	@media all and (max-width: 1120px) {
-		margin-bottom: 103px;
-	}
-	@media all and (max-width: 830px) {
-		margin-bottom: 123px;
-	}
-	@media all and (max-width: 659px) {
-		margin-bottom: 173px;
-	}
-	@media all and (max-width: 489px) {
-		margin-bottom: 50vw;
-	}
-	@media all and (max-width: 389px) {
-		margin-bottom: 60vw;
-	}
 	-webkit-column-break-inside: avoid;
 	page-break-inside: avoid;
 	break-inside: avoid;
-	height: 25vw;
+	display: inline-block;
+	height: 33vw;
+	margin-right: 2.5vw;
+	text-align: center;
+	vertical-align: top;
+	&:nth-child(3n+3) {
+		margin-right: 0;
+	}
+	width: 28%;
+	@media all and (max-width: 980px) {
+		height: 42vw;
+	}
+	@media all and (max-width: 659px) {
+		height: 62vw;
+		width: 45%;
+		margin-right: 5vw;
+		&:nth-child(3n+3) {
+			margin-right: 5vw;;
+		}
+		&:nth-child(2n+2) {
+			margin-right: 0;
+		}
+	}
+	@media all and (max-width: 489px) {
+		height: 65vw;
+	}
+	@media all and (max-width: 389px) {
+		height: 85vw;
+	}
 	img {
 		margin-bottom: 25px;
 		@media all and (max-width: 1120px) {
@@ -186,12 +198,13 @@
 	margin-bottom: 57px;
 }
 #team-members {
-	column-gap: 5vw;
-	column-count: 3;
-	margin: 0 18vw;
-	@media all and ( max-width: 659px ) {
-		column-count: 2;
-	}
+	text-align: left;
+	// column-gap: 5vw;
+	// column-count: 3;
+	margin: 0 16vw 0 20vw;
+	// @media all and ( max-width: 659px ) {
+	// 	column-count: 2;
+	// }
 	@media all and ( max-width: 489px ) {
 		margin: 0 15vw;
 	}
