--- a/style/style.css
+++ b/style/style.css
@@ -810,26 +810,35 @@ nav {
   transform: translateY(400px); }
 
 .team-members__member {
-  margin-bottom: 73px;
   -webkit-column-break-inside: avoid;
   page-break-inside: avoid;
   break-inside: avoid;
-  height: 25vw; }
-  @media all and (max-width: 1120px) {
+  display: inline-block;
+  height: 33vw;
+  margin-right: 2.5vw;
+  text-align: center;
+  vertical-align: top;
+  width: 28%; }
+  .team-members__member:nth-child(3n+3) {
+    margin-right: 0; }
+  @media all and (max-width: 980px) {
     .team-members__member {
-      margin-bottom: 103px; } }
-  @media all and (max-width: 830px) {
-    .team-members__member {
-      margin-bottom: 123px; } }
+      height: 42vw; } }
   @media all and (max-width: 659px) {
     .team-members__member {
-      margin-bottom: 173px; } }
+      height: 62vw;
+      width: 45%;
+      margin-right: 5vw; }
+      .team-members__member:nth-child(3n+3) {
+        margin-right: 5vw; }
+      .team-members__member:nth-child(2n+2) {
+        margin-right: 0; } }
   @media all and (max-width: 489px) {
     .team-members__member {
-      margin-bottom: 50vw; } }
+      height: 65vw; } }
   @media all and (max-width: 389px) {
     .team-members__member {
-      margin-bottom: 60vw; } }
+      height: 85vw; } }
   .team-members__member img {
     margin-bottom: 25px;
     width: 100%; }
@@ -849,12 +858,8 @@ nav {
   margin-bottom: 57px; }
 
 #team-members {
-  column-gap: 5vw;
-  column-count: 3;
-  margin: 0 18vw; }
-  @media all and (max-width: 659px) {
-    #team-members {
-      column-count: 2; } }
+  text-align: left;
+  margin: 0 16vw 0 20vw; }
   @media all and (max-width: 489px) {
     #team-members {
       margin: 0 15vw; } }
