--- a/style/partials/_financials.scss
+++ b/style/partials/_financials.scss
@@ -14,7 +14,7 @@
 	}
 	section {
 		height: 530px;
-		margin: 0 auto;
+		margin: 0 auto 100px;
 		position: relative;
 		text-align: left;
 		max-width: 400px;
@@ -41,6 +41,12 @@
 			padding: 0 10px;
 			margin-top: 130px;
 			width: 100%;
+		}
+		.copy--20--bebas {
+			bottom: -50px;
+			@media all and (max-width: 400px) {
+				bottom: calc(350px - 100vw);
+			}
 		}
 	}
 }
