--- a/style/partials/_supporters.scss
+++ b/style/partials/_supporters.scss
@@ -1,5 +1,9 @@
 #supporters {
 	background-color: $light-green;
+	blockquote {
+		margin-top: 60px;
+		margin-bottom: 60px;
+	}
 	#_826link-1 {
 		background: url(../assets/826logo-supporters@2x.png) no-repeat;
 		background-size: contain;
