--- a/style/style.css
+++ b/style/style.css
@@ -660,7 +660,7 @@ nav {
     width: 115px; }
   #financials section {
     height: 530px;
-    margin: 0 auto;
+    margin: 0 auto 100px;
     position: relative;
     text-align: left;
     max-width: 400px; }
@@ -679,6 +679,11 @@ nav {
     padding: 0 10px;
     margin-top: 130px;
     width: 100%; }
+  #financials #expenses .copy--20--bebas, #financials #revenue .copy--20--bebas {
+    bottom: -50px; }
+    @media all and (max-width: 400px) {
+      #financials #expenses .copy--20--bebas, #financials #revenue .copy--20--bebas {
+        bottom: calc(350px - 100vw); } }
 
 #title__financials {
   max-width: 511px; }
@@ -1308,6 +1313,9 @@ nav {
 
 #supporters {
   background-color: #dded9d; }
+  #supporters blockquote {
+    margin-top: 60px;
+    margin-bottom: 60px; }
   #supporters #_826link-1 {
     background: url(../assets/826logo-supporters@2x.png) no-repeat;
     background-size: contain;
