updated README, bug fixes

--- a/style/partials/_footer.scss
+++ b/style/partials/_footer.scss
@@ -25,6 +25,7 @@ nav {
 }
 .nav__links {
 	display: inline-block;
+	transition: .05s all;
 }
 #_826link-2 {
 	background: url(../assets/826-logo.svg) no-repeat;
