--- a/style/partials/_partners.scss
+++ b/style/partials/_partners.scss
@@ -97,7 +97,7 @@
 		}
 	}
 	#school-partners {
-		background: url(../assets/sketch-eraser.png) no-repeat;
+		background: url(../assets/sketch-eraser@2x.png) no-repeat;
 		background-position: right 120px bottom 420px;
 		background-size: 300px;
 		min-height: 2878px;
