--- a/style/style.css
+++ b/style/style.css
@@ -59,7 +59,7 @@ body {
 
 h2 {
   color: white;
-  /* font-family: BebasNeue; */
+  font-family: "bebas-neue","Haettenschweiler","Arial Narrow Bold", sans-serif;
   font-size: 90px;
   line-height: 80px;
   letter-spacing: -1.5px; }
@@ -69,7 +69,7 @@ h5 {
 
 h6 {
   color: rgba(0, 0, 0, 0.48);
-  /* font-family: BebasNeue; */
+  font-family: "bebas-neue","Haettenschweiler","Arial Narrow Bold", sans-serif;
   font-size: 20px;
   font-weight: normal;
   line-height: 1;
