--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
   font-family: 'BebasNeue';
   src: url("../assets/fonts/Bebas/BebasNeue.otf") format("opentype"); }
 @font-face {
@@ -9,7 +9,7 @@
   src: url("../assets/fonts/Bookmania/Bookmania/Bookmania Regular.otf") format("truetype"); }
 @font-face {
   font-family: 'Bookmania Italic';
-  src: url("../assets/fonts/Bookmania/Bookmania/Bookmania Regular Italic.otf") format("opentype"); } */
+  src: url("../assets/fonts/Bookmania/Bookmania/Bookmania Regular Italic.otf") format("opentype"); }
 html, body {
   overflow-x: hidden;
   width: 100%; }
@@ -17,7 +17,7 @@ html, body {
 body {
   text-align: center;
   color: rgba(0, 0, 0, 0.48);
-  /* font-family: "Futura"; */
+  font-family: "Futura";
   font-size: 20px;
   line-height: 28px; }
 
@@ -31,7 +31,7 @@ body {
     padding-bottom: 2px; }
 
 .copy--20--bebas {
-  /* font-family: BebasNeue; */
+  font-family: BebasNeue;
   font-size: 20px;
   line-height: 20px;
   letter-spacing: 0.2px;
@@ -39,27 +39,27 @@ body {
 
 .copy--16--bookmania {
   color: rgba(0, 0, 0, 0.5);
-  /* font-family: "Bookmania"; */
+  font-family: "Bookmania";
   font-size: 16px;
   line-height: 1.63;
   letter-spacing: -0.1px; }
 
 .copy--20--futura {
   color: rgba(0, 0, 0, 0.48);
-  /* font-family: "Futura"; */
+  font-family: "Futura";
   font-size: 20px;
   line-height: 28px; }
 
 .copy--big--numbers {
   color: #cf475c;
-  /* font-family: BebasNeue; */
+  font-family: BebasNeue;
   font-size: 72px;
   line-height: 40px;
   letter-spacing: 0px; }
 
 h2 {
   color: white;
-  font-family: "bebas-neue","Haettenschweiler","Arial Narrow Bold", sans-serif;
+  font-family: BebasNeue;
   font-size: 90px;
   line-height: 80px;
   letter-spacing: -1.5px; }
@@ -69,7 +69,7 @@ h5 {
 
 h6 {
   color: rgba(0, 0, 0, 0.48);
-  font-family: "bebas-neue","Haettenschweiler","Arial Narrow Bold", sans-serif;
+  font-family: BebasNeue;
   font-size: 20px;
   font-weight: normal;
   line-height: 1;
@@ -155,7 +155,7 @@ nav {
   padding: 5px 20px; }
   .link-row__box:last-child {
     border-right: none; }
-  @media (max-width: 368px) {
+  @media (max-width: 558px) {
     .link-row__box {
       border-right: none;
       display: block; } }
