--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -1,20 +1,22 @@
 .image-bg {
-  position: absolute;
+  position: fixed;
   top: -240px;
   right: -240px;
   bottom: -240px;
   left: -240px;
   overflow: hidden;
+  background-color: white;
 }
 
 .image-bg__inner {
-  animation: bg-slide 25s linear infinite;
+  animation: bg-slide 10s linear infinite;
   background-image: url(/sky1.jpg);
   background-position: center;
   background-repeat: repeat-x;
   background-size: 50% 100%;
   bottom: 0px;
-  filter: blur(80px);
+  filter: blur(80px) brightness(1.4);
+  opacity: .5;
   left: 0px;
   position: absolute;
   right: 100%;
@@ -26,4 +28,27 @@
 @keyframes bg-slide {
   from { transform: translateX(0); }
   to { transform: translateX(-50%); }  
+}
+
+.page-home__wave {
+  font-size: 35px
+}
+
+.project-grid__item {
+  &:hover, &:focus {
+    .project-grid__item__image-container {
+      box-shadow: 0 50px 80px -20px rgba(0,0,0,0.27), 0 30px 50px -30px rgba(0,0,0,0.3);
+      transform: translateY(-1px) scale(1.001);
+    }
+
+    h2 {
+      color: theme('colors.gray.700');
+      transition: ease-in-out .25s;
+    }
+  }
+}
+
+.project-grid__item__image-container {
+  box-shadow: 0 30px 60px -10px rgb(0 0 0 / 30%), 0 18px 36px -18px rgb(0 0 0 / 33%);
+  transition: ease-in-out .25s;
 }
