Remove next/font

--- a/src/styles/page-lyrics.scss
+++ b/src/styles/page-lyrics.scss
@@ -6,6 +6,10 @@ html {
   background-color: $white;
 }
 
+.font-work-sans {
+  font-family: 'Work Sans', sans-serif;
+}
+
 .page-mcconnell-lyrics {
   color: $black;
   padding: 0 10px 40px;
