--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,6 +5,7 @@
 body {
   min-height: 100vh;
   overflow-x: hidden;
+  font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
 
 .font-times {
@@ -14,19 +15,36 @@ body {
 .page-container {
   box-sizing: border-box;
   overflow: hidden;
-  height: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 40px 10px;
+  padding-left: 10px;
+  padding-right: 10px;
   position: relative;
 
   @screen sm {
-    padding: 100px 60px;
+    padding-left: 60px;
+    padding-right: 60px;
+  }
+}
+
+.page-container-top {
+  padding-top: 40px;
+
+  @screen sm {
+    padding-top: 100px;
+  }
+}
+
+.page-container-bottom {
+  padding-bottom: 40px;
+
+  @screen sm {
+    padding-bottom: 100px;
   }
 }
 
 .text-container {
-  max-width: 37em;  
+  max-width: 37em;
 }
 
 .image-bg {
@@ -56,8 +74,13 @@ body {
 }
 
 @keyframes bg-slide {
-  from { background-position: 0%; }
-  to { background-position: -100%; }  
+  from {
+    background-position: 0%;
+  }
+
+  to {
+    background-position: -100%;
+  }
 }
 
 .h-100vh {
