Update post tiles, add FAQ, update Marquee

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,7 +27,7 @@ body {
   }
 }
 
-.page-container-top {
+.page-container-top-padding {
   padding-top: 40px;
 
   @screen sm {
@@ -35,7 +35,7 @@ body {
   }
 }
 
-.page-container-bottom {
+.page-container-bottom-padding {
   padding-bottom: 40px;
 
   @screen sm {
