--- a/src/styles/testimonials.scss
+++ b/src/styles/testimonials.scss
@@ -4,20 +4,36 @@
 @use 'swiper/scss/pagination';
 @use 'swiper/scss/autoplay';
 
-:root {
-    --swiper-pagination-bottom: theme('spacing.5');
-}
+.testimonials {
+    @screen sm {
+        // Match .page-container, but without mobile padding
+        padding-left: 60px;
+        padding-right: 60px;
+    }
 
-.swiper-pagination-bullet-active {
-    background-color: theme('colors.gray.800');
-}
+    .swiper-pagination-bullet-active {
+        background-color: theme('colors.gray.800');
+    }
 
-.particles {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: 10;
-    pointer-events: none;
+    .particles {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 10;
+        pointer-events: none;
+    }
+
+    .swiper-wrapper {
+        background-color: white;
+
+        @screen sm {
+            border-radius: 1rem;
+        }
+    }
+
+    .swiper-slide:not(.swiper-slide-active) {
+        opacity: 0 !important;
+    }
 }
