Fix page container issues, 1 typo, and disable marquee pausing for devices without hover

--- a/src/styles/marquee.scss
+++ b/src/styles/marquee.scss
@@ -3,7 +3,9 @@
     &:hover,
     &:focus {
         .marquee-group {
-            animation-play-state: paused;
+            @media (hover: hover) {
+                animation-play-state: paused;
+            }
         }
     }
 }
