--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -6,9 +6,13 @@
   --swiper-pagination-bottom: theme('spacing.5');
 }
 
+html,
 body {
+  height: 100%;
   overscroll-behavior: none;
-  min-height: 100vh;
+}
+
+body {
   overflow-x: hidden;
   font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 }
@@ -78,8 +82,4 @@ body {
   to {
     background-position: -100%;
   }
-}
-
-.h-100vh {
-  height: 100vh;
 }
